setting project strucure "onion archirtecture"

--- a/Route.TechCommit.Apis/Route.TechCommit.Apis.csproj
+++ b/Route.TechCommit.Apis/Route.TechCommit.Apis.csproj
@@ -14,11 +14,12 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\" />
+    <ProjectReference Include="..\Route.TechSummit.Infrastructure.Presistence\Route.TechSummit.Infrastructure.Presistence.csproj" />
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Route.TechSummit.Infrastructure.Presistence\Route.TechSummit.Infrastructure.Presistence.csproj" />
+    <Folder Include="Extensions\" />
+    <Folder Include="Services\" />
   </ItemGroup>
 
 </Project>
