refactoring the code for more abstraction and generic

--- a/Route.TechSummit.Application/Route.TechSummit.Application.csproj
+++ b/Route.TechSummit.Application/Route.TechSummit.Application.csproj
@@ -12,7 +12,8 @@
 
   <ItemGroup>
     <Folder Include="Mapping\" />
-    <Folder Include="Services\Products\" />
+    <Folder Include="Service\Order\" />
+    <Folder Include="Service\Product\" />
   </ItemGroup>
 
   <ItemGroup>
