--- a/Route.TechSummit.Domain/Route.TechSummit.Domain.csproj
+++ b/Route.TechSummit.Domain/Route.TechSummit.Domain.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Route.TechSummit.Abstraction\Route.TechSummit.Abstraction.csproj" />
+  </ItemGroup>
+
 </Project>
