--- a/Route.TechSummit.Controllers/Route.TechSummit.Controllers.csproj
+++ b/Route.TechSummit.Controllers/Route.TechSummit.Controllers.csproj
@@ -10,4 +10,13 @@
     <Folder Include="Models\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Route.TechSummit.Abstraction\Route.TechSummit.Abstraction.csproj" />
+  </ItemGroup>
+
 </Project>
