--- a/Route.TechSummit.Abstraction/Route.TechSummit.Abstraction.csproj
+++ b/Route.TechSummit.Abstraction/Route.TechSummit.Abstraction.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+	<ItemGroup>
+		<ProjectReference Include="..\Route.TechSummit.Application\Route.TechSummit.Application.csproj" />
+	</ItemGroup>
+
 </Project>
