handling project structure and fixing errors

--- a/DTOs/DTOs.csproj
+++ b/DTOs/DTOs.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\DTOs\DTOs.csproj" />
+    <ProjectReference Include="..\Route.TechSummit.Domain\Route.TechSummit.Domain.csproj" />
   </ItemGroup>
+
 </Project>
