--- a/Route.TechSummit.Application/Route.TechSummit.Application.csproj
+++ b/Route.TechSummit.Application/Route.TechSummit.Application.csproj
@@ -7,13 +7,14 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Route.TechSummit.Abstraction\Route.TechSummit.Abstraction.csproj" />
-    <ProjectReference Include="..\Route.TechSummit.Domain\Route.TechSummit.Domain.csproj" />
-    <ProjectReference Include="..\Route.TechSummit.Infrastructure\Route.TechSummit.Infrastructure.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="AutoMapper" Version="15.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DTOs\DTOs.csproj" />
+    <ProjectReference Include="..\Route.TechSummit.Abstraction\Route.TechSummit.Abstraction.csproj" />
+    <ProjectReference Include="..\Route.TechSummit.Infrastructure\Route.TechSummit.Infrastructure.csproj" />
+  </ItemGroup>
+	
+	
 </Project>
